Added first section - top; out of four

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="Chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="header">
-        <div class="header-top">
-            <div class="left">Header Logo</div>
-            <div class="right">
+    <div class="section-one">
+        <div class="top">
+            <div class="top-left">Header Logo</div>
+            <div class="top-right">
                 <ul>
                     <li>header link one</li>
                     <li>header link two</li>
@@ -18,7 +19,17 @@
                 </ul>
             </div>
         </div>
+        <div class="bot">
+            <div class="bot-left">
+                <h1>This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="bot-right">
+                <img src="Images/Header.jpg" alt="Book cover - pink">
+            </div>
+        </div>
     </div>
-
+    
 </body>
 </html>
